--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^4.4.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
+    "@flowershow/remark-wiki-link": "^2.0.4",
     "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.14.1",
